// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`HomePage Component matches snapshot for HomePage component if user is logged in 1`] = `
<DocumentFragment>
  <div>
    <h1>
      Meine Rezepte
    </h1>
    <div
      class="myRecipesDiv"
    >
      <div
        class="RowArea "
      >
        <div
          class="mt-3 hstack"
        >
          <div
            class="ImageArea"
          >
            <img
              alt="dish"
              src="image.jpg"
            />
          </div>
          <a
            href="/recipe/view/1"
          >
             
            <div
              class="TextArea"
            >
              <h2
                class="FoodTitle"
              >
                Test Recipe
              </h2>
            </div>
          </a>
          <div
            class="col-1"
          >
            <div
              class="EditButton"
            >
              <button
                class="bi bi-pencil btn btn-primary"
                type="button"
              >
                 Edit
              </button>
            </div>
            <button
              class="bi bi-x m-2 btn btn-danger"
              type="button"
            />
          </div>
        </div>
      </div>
    </div>
    <h2
      class="FoodTitle"
    >
      Mein Kühlschrank
    </h2>
    <div
      class="col-md-4 mx-auto mt-3 vstack gap-2"
    >
      <button
        class="btn btn-success"
        type="button"
      >
        Produkt hinzufügen
      </button>
      <button
        class="btn btn-primary"
        type="button"
      >
        Speichern
      </button>
    </div>
    <h2
      class="FoodTitle"
    >
      Kühlschrank Inhalt:
    </h2>
    <table
      class="mt-3 table table-striped table-bordered table-hover"
    >
      <thead>
        <tr>
          <th>
            Produkt
          </th>
          <th>
            Menge
          </th>
          <th>
            Löschen
          </th>
        </tr>
      </thead>
      <tbody />
    </table>
  </div>
</DocumentFragment>
`;

exports[`HomePage Component matches snapshot for HomePage component if user is not logged in 1`] = `
<DocumentFragment>
  <div>
    <h1>
      Meine Rezepte
    </h1>
    <div
      class="myRecipesDiv"
    >
      <h3>
        Keine Rezepte vorhanden
      </h3>
    </div>
    <h2
      class="FoodTitle"
    >
      Mein Kühlschrank
    </h2>
    <div
      class="col-md-4 mx-auto mt-3 vstack gap-2"
    >
      <button
        class="btn btn-success"
        type="button"
      >
        Produkt hinzufügen
      </button>
      <button
        class="btn btn-primary"
        type="button"
      >
        Speichern
      </button>
    </div>
    <h2
      class="FoodTitle"
    >
      Kühlschrank Inhalt:
    </h2>
    <table
      class="mt-3 table table-striped table-bordered table-hover"
    >
      <thead>
        <tr>
          <th>
            Produkt
          </th>
          <th>
            Menge
          </th>
          <th>
            Löschen
          </th>
        </tr>
      </thead>
      <tbody />
    </table>
  </div>
</DocumentFragment>
`;
